apps/quote-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-api
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: quote-api
  ports:
    - port: 80
      targetPort: 3000
